--- a/index.html
+++ b/index.html
@@ -2,71 +2,51 @@
 <html>
 <body>
 
-<h3>Examio Loader Debug</h3>
-
 <script>
 (async function () {
 
-  try {
+  const params = new URLSearchParams(window.location.search);
 
-    document.body.innerHTML += "<p>Loader started</p>";
+  const embedToken = params.get("embed_token");
+  const batchToken = params.get("batch_token");
+  const domain = params.get("domain");
 
-    const params = new URLSearchParams(window.location.search);
-
-    const embedToken = params.get("embed_token");
-    const batchToken = params.get("batch_token");
-
-    const referrer = document.referrer;
-
-    document.body.innerHTML += `<p>Embed: ${embedToken}</p>`;
-    document.body.innerHTML += `<p>Batch: ${batchToken}</p>`;
-    document.body.innerHTML += `<p>Referrer: ${referrer}</p>`;
-
-    if (!embedToken || !batchToken) {
-      document.body.innerHTML += "<p>Missing tokens ❌</p>";
-      return;
-    }
-
-    const res = await fetch(
-      "https://lvjtqqnxtrbxeozjrsku.supabase.co/functions/v1/verify-embed",
-      {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "Authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imx2anRxcW54dHJieGVvempyc2t1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njk3MDc3MzEsImV4cCI6MjA4NTI4MzczMX0.Kfn2VXculf1SMWkaleOIM9qRraOzoNmsTnD8HKPirO4"
-        },
-        body: JSON.stringify({
-          token: embedToken,
-          referrer: referrer
-        })
-      }
-    );
-
-    const data = await res.json();
-
-    document.body.innerHTML += `<p>Verify: ${JSON.stringify(data)}</p>`;
-
-    if (!data.allow) {
-      document.body.innerHTML += "<p>Embed not allowed ❌</p>";
-      return;
-    }
-
-    document.body.innerHTML += "<p>Loading exam...</p>";
-
-    const iframe = document.createElement("iframe");
-
-    iframe.src = `https://www.examio.xyz/?batch_token=${batchToken}&embed=true`;
-
-    iframe.style.width = "100%";
-    iframe.style.height = "700px";
-
-    document.body.appendChild(iframe);
-
-  } catch (e) {
-
-    document.body.innerHTML += `<p style="color:red">CRASH: ${e}</p>`;
-
+  if (!embedToken || !batchToken || !domain) {
+    document.body.innerHTML = "Access denied ❌";
+    return;
   }
+
+  const res = await fetch(
+    "https://lvjtqqnxtrbxeozjrsku.supabase.co/functions/v1/verify-embed",
+    {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+        "Authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imx2anRxcW54dHJieGVvempyc2t1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njk3MDc3MzEsImV4cCI6MjA4NTI4MzczMX0.Kfn2VXculf1SMWkaleOIM9qRraOzoNmsTnD8HKPirO4"
+      },
+      body: JSON.stringify({
+        token: embedToken,
+        referrer: "https://" + domain
+      })
+    }
+  );
+
+  const data = await res.json();
+
+  if (!data.allow) {
+    document.body.innerHTML = "Embed not allowed ❌";
+    return;
+  }
+
+  const iframe = document.createElement("iframe");
+
+  iframe.src = `https://www.examio.xyz/?batch_token=${batchToken}&embed=true`;
+
+  iframe.style.width = "100%";
+  iframe.style.height = "100vh";
+  iframe.style.border = "none";
+
+  document.body.appendChild(iframe);
 
 })();
 </script>
