--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h3>Examio Debug Loader</h3>
+<p>Loading Exam...</p>
 
 <script>
 (async function () {
@@ -12,16 +12,16 @@
   const embedToken = params.get("embed_token");
   const batchToken = params.get("batch_token");
 
-  document.body.innerHTML += `<p>Token: ${embedToken}</p>`;
-  document.body.innerHTML += `<p>Batch: ${batchToken}</p>`;
+  if (!embedToken || !batchToken) {
+    document.body.innerHTML = "Access denied ❌";
+    return;
+  }
 
   window.addEventListener("message", async (event) => {
 
     try {
 
       const parentDomain = event.data.domain;
-
-      document.body.innerHTML += `<p>Domain received: ${parentDomain}</p>`;
 
       if (!parentDomain) return;
 
@@ -30,8 +30,7 @@
         {
           method: "POST",
           headers: {
-            "Content-Type": "application/json",
-            "Authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imx2anRxcW54dHJieGVvempyc2t1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njk3MDc3MzEsImV4cCI6MjA4NTI4MzczMX0.Kfn2VXculf1SMWkaleOIM9qRraOzoNmsTnD8HKPirO4"
+            "Content-Type": "application/json"
           },
           body: JSON.stringify({
             token: embedToken,
@@ -42,28 +41,24 @@
 
       const data = await res.json();
 
-      document.body.innerHTML += `<p>Verify result: ${JSON.stringify(data)}</p>`;
-
       if (!data.allow) {
-        document.body.innerHTML += "<p>Blocked ❌</p>";
+        document.body.innerHTML = "Embed not allowed ❌";
         return;
       }
-
-      document.body.innerHTML += "<p>Loading exam...</p>";
 
       const iframe = document.createElement("iframe");
 
       iframe.src = `https://www.examio.xyz/?batch_token=${batchToken}&embed=true`;
 
       iframe.style.width = "100%";
-      iframe.style.height = "700px";
+      iframe.style.height = "100vh";
+      iframe.style.border = "none";
 
+      document.body.innerHTML = "";
       document.body.appendChild(iframe);
 
-    } catch (e) {
-
-      document.body.innerHTML += `<p style="color:red">CRASH: ${e}</p>`;
-
+    } catch {
+      document.body.innerHTML = "Loader error ❌";
     }
 
   });
@@ -73,4 +68,3 @@
 
 </body>
 </html>
-
