--- a/index.html
+++ b/index.html
@@ -1,69 +1,92 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta charset="UTF-8">
+<title>Examio Widget Loader</title>
+
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-size: 18px;
+}
+</style>
+</head>
+
 <body>
 
-<p>Loading Exam...</p>
+<div id="app" class="loader">
+Loading Exam Portal...
+</div>
 
 <script>
-(async function () {
 
-  const params = new URLSearchParams(window.location.search);
+(async () => {
 
-  const embedToken = params.get("embed_token");
-  const batchToken = params.get("batch_token");
+  try {
 
-  if (!embedToken || !batchToken) {
-    document.body.innerHTML = "Access denied ❌";
-    return;
-  }
+    // ⭐ READ PARAMS FROM SCRIPT TAG
+    const script = document.currentScript;
 
-  window.addEventListener("message", async (event) => {
+    const embedToken = script?.getAttribute("data-embed-token");
+    const batchToken = script?.getAttribute("data-batch-token");
 
-    try {
-
-      const parentDomain = event.data.domain;
-
-      if (!parentDomain) return;
-
-      const res = await fetch(
-        "https://lvjtqqnxtrbxeozjrsku.supabase.co/functions/v1/verify-embed",
-        {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify({
-            token: embedToken,
-            referrer: "https://" + parentDomain
-          })
-        }
-      );
-
-      const data = await res.json();
-
-      if (!data.allow) {
-        document.body.innerHTML = "Embed not allowed ❌";
-        return;
-      }
-
-      const iframe = document.createElement("iframe");
-
-      iframe.src = `https://www.examio.xyz/?batch_token=${batchToken}&embed=true`;
-
-      iframe.style.width = "100%";
-      iframe.style.height = "100vh";
-      iframe.style.border = "none";
-
-      document.body.innerHTML = "";
-      document.body.appendChild(iframe);
-
-    } catch {
-      document.body.innerHTML = "Loader error ❌";
+    if (!embedToken || !batchToken) {
+      document.body.innerHTML = "Missing embed configuration ❌";
+      return;
     }
 
-  });
+    // ⭐ VERIFY WITH EDGE FUNCTION
+    const response = await fetch(
+      "https://lvjtqqnxtrbxeozjrsku.supabase.co/functions/v1/verify-embed",
+      {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({
+          token: embedToken,
+          batch_token: batchToken,
+          referrer: window.location.href
+        })
+      }
+    );
+
+    const data = await response.json();
+
+    if (!data.allow) {
+      document.body.innerHTML = "Access Denied ❌";
+      return;
+    }
+
+    // ⭐ LOAD EXAM IFRAME
+    const iframe = document.createElement("iframe");
+
+    iframe.src =
+      `https://www.examio.xyz/?batch_token=${batchToken}&embed=true`;
+
+    iframe.style.width = "100%";
+    iframe.style.height = "100vh";
+    iframe.style.border = "none";
+
+    document.body.innerHTML = "";
+    document.body.appendChild(iframe);
+
+  } catch (e) {
+
+    console.error(e);
+    document.body.innerHTML = "Loader error ❌";
+
+  }
 
 })();
+
 </script>
 
 </body>
